--- a/index.html
+++ b/index.html
@@ -8,6 +8,55 @@
     <title>Fabryka żelków</title>
 </head>
 <body>
-    
+
+
+
+<div class="gorny"></div>
+
+
+
+<div class="baner"> </div>  
+
+
+
+
+<div class="glowny">
+    <h1>oferta</h1>
+        <table>
+            <tr>
+                <td>Kształty</td>
+                <td>Kolory</td>
+            </tr>
+            <tr>
+                <td>
+                    <ol>
+                        <li>miś</li>
+                        <li>żaba</li>
+                        <li>serce</li>
+                    </ol>
+                </td>
+                <td>
+                    <ol>
+                        <li>czerwony</li>
+                        <li>niebieski</li>
+                        <li>żółty</li>
+                        <li>inny</li>
+                    </ol>
+                </td>
+            </tr>
+        </table>
+</div>
+
+
+
+
+<div class="glowny"> </div> 
+
+
+
+<div class="stopka"> </div> 
+
+
+
 </body>
 </html>
