--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>img imng</header>
+    <header>Zamów nasz produkt</header>
+    <main>
+        <article id="left">
+        <h2>Oferta</h2>
+        <table>
+            <tr>
+                <td>Kształty</td>
+                <td>Kolory</td>
+            </tr>
+            <tr>
+                <td>
+                    <ol>
+                        <li>Mis</li>
+                        <li>Zabka</li>
+                        <li>Serce</li>
+                    </ol>
+                </td>
+                <td>
+                    <ol>
+                        <li>Czerwony</li>
+                        <li>Niebieski</li>
+                        <li>Żółty</li>
+                        <li>Inny</li>
+                    </ol>
+                </td>
+            </tr>
+        </table>
+        </article>
+        <article id="right">
+            <form>
+                
+            </form>
+        </article>
+    </main>
 </body>
 </html>
