--- a/index.html
+++ b/index.html
@@ -8,14 +8,40 @@
     <link rel="stylesheet" href="styl9.css">
 </head>
 <body>
-    <div></div>
-    <div></div>
+    <div><a href="index.html"><img src="#" alt="logo fabryki"></a></div>
+    <div><a href="zamowienie.html"><img src="#" alt="Zamówienie"></a></div>
 
     <header></header>
 
-    <div></div>
+    <div>
+        <h1>Oferta</h1>
+        <table>
+            <tr>
+                <td>Kształty</td>
+                <td>Kolory</td>
+            </tr>
+            <tr>
+                <td>
+                    <ol>
+                        <li>miś</li>
+                        <li>żabka</li>
+                        <li>serce</li>
+                    </ol>
+                </td>
+                <td>
+                    <ol>
+                        <li>czerwony</li>
+                        <li>niebieski</li>
+                        <li>żółty</li>
+                        <li>inny</li>
+                    </ol>
+
+                </td>
+            </tr>
+        </table>
+    </div>
     <div></div>
 
-    <footer></footer>
+    <footer><p>Autor strony: <q> PESEL(Kamil Świątek 3B)</q></p></footer>
 </body>
 </html>
