--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div><a href="index.html"><img src="#" alt="logo fabryki"></a></div>
     <div><a href="zamowienie.html"><img src="#" alt="Zamówienie"></a></div>
 
-    <header></header>
+    <header><h2>Nasza oferta</h2></header>
 
     <div>
         <h1>Oferta</h1>
@@ -40,7 +40,7 @@
             </tr>
         </table>
     </div>
-    <div></div>
+    <div><img src="#" alt="Nasze wyroby"></div>
 
     <footer><p>Autor strony: <q> PESEL(Kamil Świątek 3B)</q></p></footer>
 </body>
