--- a/zamowienie.html
+++ b/zamowienie.html
@@ -11,7 +11,7 @@
     <div><a href="index.html"><img src="#" alt="logo fabryki"></a></div>
     <div><a href="zamowienie.html"><img src="#" alt="Zamówienie"></a></div>
 
-    <header></header>
+    <header><h2>Zamów nasz produkt</h2></header>
 
     <div>
         <h1>Oferta</h1>
@@ -40,7 +40,20 @@
             </tr>
         </table>
     </div>
-    <div></div>
+    <div>
+        <p>Podaj numer kształtu: </p>
+        <input type="number">
+        <p>skomponuj swój kolor, podaj RGB: </p>
+        <p>R</p>
+        <input type="number">
+        <p>G</p>
+        <input type="number">
+        <p>B</p>
+        <input type="number">
+        <input type="submit">
+        <p>Wybrany kształt</p>
+        <button>Wybrany kolor</button>
+    </div>
 
     <footer><p>Autor strony: <q> PESEL(Kamil Świątek 3B)</q></p></footer>
 </body>
