--- a/index/index.html
+++ b/index/index.html
@@ -7,12 +7,5 @@
     <link rel="stylesheet" href="styl9.css" />
     <title>Fabryka żelków</title>
   </head>
-  <body>
-    <nav class="left"></nav>
-    <nav class="right"></nav>
-    <div class="banner"></div>
-    <main class="left"></main>
-    <main class="right"></main>
-    <footer class="footer"></footer>
-  </body>
+  <body></body>
 </html>
