--- a/index/zamowienia.html
+++ b/index/zamowienia.html
@@ -5,6 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styl9.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="left">
+      <img src="./img/cukierki1.jpg" alt="logo fabryki" href="#" />
+    </nav>
+
+    <nav class="right">
+      <img src="./img/cukierki2.png" alt="logo fabryki" href="#" />
+    </nav>
+
+    <div class="banner">
+      <h2>Zamów nasz produkt</h2>
+    </div>
+
+    <article class="left">
+      <h1>Oferta</h1>
+      <table>
+        <tr>
+          <td>Kształty</td>
+          <td>Kolory</td>
+        </tr>
+        <tr>
+          <td>
+            <ol>
+              <li>miś</li>
+              <li>żabka</li>
+              <li>serce</li>
+            </ol>
+          </td>
+          <td>
+            <ol>
+              <li>czerwony</li>
+              <li>niebieski</li>
+              <li>żółty</li>
+              <li>inny</li>
+            </ol>
+          </td>
+        </tr>
+      </table>
+    </article>
+
+    <article class="right">
+      <img src="./img/cukierki3.jpg" alt="Nasze wyroby" />
+
+      <p>Podaj numer kształtu</p>
+      <input type="number" name="ksztalt" id="nr_ksztaltu" />
+
+      <p>skomponuj swój kolor, podaj RGB:</p>
+      R<input type="number" name="red" id="" /> G<input
+        type="number"
+        name="green"
+        id=""
+      />
+      B<input type="number" name="blue" id="" />
+
+      <button onclick="">Zamów</button>
+      <p>Wybrany ształt:</p>
+
+      <button>Wybrany kolor</button>
+    </article>
+
+    <footer class="footer">
+      <p>Autor strony: Marcel Lis</p>
+    </footer>
+  </body>
 </html>
