--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styl9.css">
     <title>Document</title>
 </head>
 <body>
-    <header>img imng</header>
-    <header>Zamów nasz produkt</header>
+    <div id="obrazki">img imng</header>
+    <div id="obrazki">img imng</header>
+    <header id="heheh">Zamów nasz produkt</header>
     <main>
         <article id="left">
         <h2>Oferta</h2>
@@ -42,5 +44,6 @@
             </form>
         </article>
     </main>
+    <footer><p>Autor strony: oooooooooooo</p></footer>
 </body>
 </html>
