poczatek styl9.css     stworzenie zamowienia.html
stworzenie poczatku index.html
stworzenie zamowienia.html przez skopiowanie index.html
ciag dalszy kodu index.html

--- a/zamowienia.html
+++ b/zamowienia.html
@@ -22,10 +22,8 @@
 
 
 <div class="baner">
-    <h2>Nasza Oferta</h2>
+    <h2>Zamów nasz produkt</h2>
 </div>  
-
-
 
 
 <div class="glowny">
@@ -59,7 +57,15 @@
 
 
 <div class="glowny">
-    <img src="img/cukierki3.jpg" alt="Nasze Wybory">
+    Podaj numer kształtu:<br>
+    <input type="number"><br>
+    skomponuj swój kolor, podaj RGB: <br>
+    R<input type="number">
+    G<input type="number">
+    B<input type="number"><br>
+    <button>Zamów</button>
+    <p>Wybrany kształt</p>
+    <button>Wybrany kolor</button>
 </div> 
 
 
@@ -71,4 +77,4 @@
 
 
 </body>
-</html>
+</html
