fixed some stuff

--- a/zamowienie.html
+++ b/zamowienie.html
@@ -9,16 +9,16 @@
     <header>
         <section>
             <a href="index.html">
-                <img src="#" alt="logo fabryki">
+                <img src="cukierki2.png" alt="logo fabryki">
             </a>
         </section>
         <section>
             <a href="zamowienie.html">
-                <img src="#" alt="#">\
+                <img src="cukierki2.png" alt="#">
             </a>
         </section>
     </header>
-    <div><h2>Zamów nasz produkt</h2></div>
+    <div class="banner"><h2>Zamów nasz produkt</h2></div>
     <main>
         <section>
             <h1>Oferta</h1>
@@ -46,6 +46,7 @@
                 </tr>
             </table>
         </section>
+        <section>
             <form action="#" method="GET">
                 <label for="numer">Podaj numer kształtu:</label><br/>
                 <input type="number" name="numer"><br/>
@@ -59,8 +60,7 @@
             <p>
                Wybrany kształt 
             </p>
-            <button>Wybrany kolor</button>
-        <section>
+            <button>Wybrany kolor</button>   
         </section>
     </main>
     <footer>
