--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <header>
         <section>
             <a href="index.html">
-                <img src="#" alt="logo fabryki">
+                <img src="cukierki2.png" alt="logo fabryki">
             </a>
         </section>
         <section>
             <a href="zamowienie.html">
-                <img src="#" alt="#">\
+                <img src="cukierki2.png" alt="#">
             </a>
         </section>
     </header>
-    <div><h2>Nasza oferta</h2></div>
+    <div class="banner"><h2>Nasza oferta</h2></div>
     <main>
         <section>
             <h1>Oferta</h1>
@@ -46,8 +46,8 @@
                 </tr>
             </table>
         </section>
-            <img src="#" alt="Nasze wyroby">
         <section>
+            <img src="#" alt="Nasze wyroby">
         </section>
     </main>
     <footer>
