--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="styl9.css">
 </head>
 <body>
-    <div><a href="index.html"><img src="#" alt="logo fabryki"></a></div>
-    <div><a href="zamowienie.html"><img src="#" alt="Zamówienie"></a></div>
+    <div class="up"><a href="index.html"><img src="#" alt="logo fabryki"></a></div>
+    <div class="up zamow"><a href="zamowienie.html"><img src="#" alt="Zamówienie"></a></div>
 
-    <header><h2>Nasza oferta</h2></header>
+    <header class="banStop"><h2>Nasza oferta</h2></header>
 
-    <div>
+    <div class="mein">
         <h1>Oferta</h1>
         <table>
             <tr>
@@ -40,8 +40,8 @@
             </tr>
         </table>
     </div>
-    <div><img src="#" alt="Nasze wyroby"></div>
+    <div class="mein"><img src="#" alt="Nasze wyroby"></div>
 
-    <footer><p>Autor strony: <q> PESEL(Kamil Świątek 3B)</q></p></footer>
+    <footer class="banStop"><p>Autor strony: <q> PESEL(Kamil Świątek 3B)</q></p></footer>
 </body>
 </html>
