--- a/zamowienie.html
+++ b/zamowienie.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="styl9.css">
 </head>
 <body>
-    <div><a href="index.html"><img src="#" alt="logo fabryki"></a></div>
-    <div><a href="zamowienie.html"><img src="#" alt="Zamówienie"></a></div>
+    <div class="up"><a href="index.html"><img src="#" alt="logo fabryki"></a></div>
+    <div class="up zamow"><a href="zamowienie.html"><img src="#" alt="Zamówienie"></a></div>
 
-    <header><h2>Zamów nasz produkt</h2></header>
+    <header class="banStop"><h2>Zamów nasz produkt</h2></header>
 
-    <div>
+    <div class="mein">
         <h1>Oferta</h1>
         <table>
             <tr>
@@ -40,7 +40,7 @@
             </tr>
         </table>
     </div>
-    <div>
+    <div class="mein">
         <p>Podaj numer kształtu: </p>
         <input type="number">
         <p>skomponuj swój kolor, podaj RGB: </p>
@@ -55,6 +55,6 @@
         <button>Wybrany kolor</button>
     </div>
 
-    <footer><p>Autor strony: <q> PESEL(Kamil Świątek 3B)</q></p></footer>
+    <footer class="banStop"><p>Autor strony: <q> PESEL(Kamil Świątek 3B)</q></p></footer>
 </body>
 </html>
