Made concepts of both sites

--- a/index/zamowienia.html
+++ b/index/zamowienia.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="styl9.css" />
   </head>
   <body>
-    <nav class="left">
-      <img src="./img/cukierki1.jpg" alt="logo fabryki" href="#" />
+    <nav class="nav_left">
+      <img src="./img/cukierki1.jpg" alt="logo fabryki" />
     </nav>
 
-    <nav class="right">
-      <img src="./img/cukierki2.png" alt="logo fabryki" href="#" />
+    <nav class="nav_right">
+      <img src="./img/cukierki1.jpg" alt="" />
     </nav>
 
     <div class="banner">
       <h2>Zamów nasz produkt</h2>
     </div>
 
-    <article class="left">
+    <article class="article_left">
       <h1>Oferta</h1>
       <table>
         <tr>
@@ -47,7 +47,7 @@
       </table>
     </article>
 
-    <article class="right">
+    <article class="article_right">
       <img src="./img/cukierki3.jpg" alt="Nasze wyroby" />
 
       <p>Podaj numer kształtu</p>
