--- a/index/index.html
+++ b/index/index.html
@@ -7,5 +7,44 @@
     <link rel="stylesheet" href="styl9.css" />
     <title>Fabryka żelków</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="nav_left">
+      <img src="./img/cukierki1.jpg" alt="logo fabryki" />
+    </nav>
+
+    <nav class="nav_right">
+      <img src="./img/cukierki1.jpg" alt="" />
+    </nav>
+
+    <div class="banner">
+      <h2>Zamów nasz produkt</h2>
+    </div>
+
+    <article class="article_left">
+      <h1>Oferta</h1>
+      <table>
+        <tr>
+          <td>Kształty</td>
+          <td>Kolory</td>
+        </tr>
+        <tr>
+          <td>
+            <ol>
+              <li>miś</li>
+              <li>żabka</li>
+              <li>serce</li>
+            </ol>
+          </td>
+          <td>
+            <ol>
+              <li>czerwony</li>
+              <li>niebieski</li>
+              <li>żółty</li>
+              <li>inny</li>
+            </ol>
+          </td>
+        </tr>
+      </table>
+    </article>
+  </body>
 </html>
