--- a/zamowienie.html
+++ b/zamowienie.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styl9.css">
 </head>
 <body>
-    <div class="up"><a href="index.html"><img src="#" alt="logo fabryki"></a></div>
-    <div class="up zamow"><a href="zamowienie.html"><img src="#" alt="Zamówienie"></a></div>
+    <section class="up"><a href="index.html"><img src="logo.png" alt="logo fabryki"></a></section>
+    <section class="up zamow"><a href="zamowienie.html"><img src="#" alt="Zamówienie"></a></section>
 
     <header class="banStop"><h2>Zamów nasz produkt</h2></header>
 
