some fixes and new img

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <header>
         <section>
             <a href="index.html">
-                <img src="cukierki2.png" alt="logo fabryki">
+                <img src="cukierki1.jpg" alt="logo fabryki">
             </a>
         </section>
         <section>
             <a href="zamowienie.html">
-                <img src="cukierki2.png" alt="#">
+                Zamowienie
             </a>
         </section>
     </header>
@@ -47,7 +47,7 @@
             </table>
         </section>
         <section>
-            <img src="#" alt="Nasze wyroby">
+            <img src="cukierki3.jpg" alt="Nasze wyroby" class="cukierki3">
         </section>
     </main>
     <footer>
