--- a/zamowienie.html
+++ b/zamowienie.html
@@ -9,12 +9,12 @@
     <header>
         <section>
             <a href="index.html">
-                <img src="cukierki2.png" alt="logo fabryki">
+                <img src="cukierki1.jpg" alt="logo fabryki">
             </a>
         </section>
         <section>
             <a href="zamowienie.html">
-                <img src="cukierki2.png" alt="#">
+                Zamowienie
             </a>
         </section>
     </header>
