--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="obrazki">img imng</header>
-    <div id="obrazki">img imng</header>
+    <div id="obrazki">
+        <img id="a1" src="img\cukierki1.jpg" title="img.txt" wikdth="100px" height="100px">
+        <img id="a2"src="img\cukierki2.png" title="img.txt" wikdth="100px" height="100px">
+    </div>
+
     <header id="heheh">Zamów nasz produkt</header>
     <main>
         <article id="left">
@@ -40,10 +43,18 @@
         </article>
         <article id="right">
             <form>
-                
+               <p>Podaj numer kształtu:</p>
+               <input type="text" name="nrKsz">
+               <p>skomponuj swoj kolor, podaj RGB:</p>
+               R:<input type="text" name="R">
+               G:<input type="text" name="G">
+               B:<input type="text" name="B">
+               <p><input type="button" name="Zamow" ></p>
+               <p>Wybrany kolor</p>
+               <p><input type="button" name="Wybrany" ></p>
             </form>
         </article>
     </main>
-    <footer><p>Autor strony: oooooooooooo</p></footer>
+    <footer><p>Autor strony: Dominik P</p></footer>
 </body>
 </html>
