dopisywania poprawy kodu/stylistyka/zamiana zdjec
dopisanie reszty kodu do styl9.css
lekkie poprawki w zamowienia.html
lekkie poprawki w index.html
zamiana jednego zdjecia w folderze /img na przerobione

--- a/zamowienia.html
+++ b/zamowienia.html
@@ -60,9 +60,9 @@
     Podaj numer kształtu:<br>
     <input type="number"><br>
     skomponuj swój kolor, podaj RGB: <br>
-    R<input type="number">
-    G<input type="number">
-    B<input type="number"><br>
+    R:<input type="number">
+    G:<input type="number">
+    B:<input type="number"><br>
     <button>Zamów</button>
     <p>Wybrany kształt</p>
     <button>Wybrany kolor</button>
