more fixes and cosmetic changes

--- a/zamowienie.html
+++ b/zamowienie.html
@@ -64,7 +64,7 @@
         </section>
     </main>
     <footer>
-        <p>Autor strony: Jakub Kwolek</p>
+        <p>Autor strony:<i> Jakub Kwolek</i></p>
     </footer>
 </body>
 </html>
