--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     <header>
 <div class="goraL">
-    <a href="index.html"><img src="cukierki2.png" width="250" height="150"      alt="logo fabryki"></a>
+    <a href="index.html"><img src="1.png" width="250" height="150"      alt="logo fabryki"></a>
 </div>
 <div class="goraP">
     <a href="zamowienie.html"><img src="cukierki1.jpg"></a>
 </div>
 </header>
+
 <div class="baner">
     <h1>ZAMÓW NASZ PRODUKT</h1>
 </div>
@@ -44,6 +45,8 @@
         </tr>
     </table>
 </div>
+
+
 <div class="prawy">
  Podaj numer kształtu:<br>
  <input type="number"><br>
@@ -56,9 +59,10 @@
  <br>
  <button type="button">Wybrany kolor</button>
 </div>
+
 <div class="stopka">
     <i>Autor strony:Bartłomiej Puk 3B</i>
-</div> 
+</div>
 </body>
 
 </html>
