--- a/zamowienie.html
+++ b/zamowienie.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fabryka żelków</title>
+    <title>Fabryka Żelków</title>
+    <link rel="stylesheet" href="styl9.css">
 </head>
 <body>
-    
+    <header>
+<div class="goraL">
+    <a href="index.html"><img src="1.png" width="250" height="150"      alt="logo fabryki"></a>
+</div>
+<div class="goraP">
+    <a href="zamowienie.html"><img src="cukierki1.jpg"></a>
+</div>
+</header>
+
+<div class="baner">
+    <h1>ZAMÓW NASZ PRODUKT</h1>
+</div>
+<div class="lewy">
+    <h2>Oferta</h2>
+    <br>
+    <table>
+        <tr>
+            <td>Kształty</td>
+            <td>Kolory</td>
+        </tr>
+        <tr>
+            <td><ol>
+                1.miś<br>
+                2.żabka<br>
+                3.serce<br>
+            </ol></td>
+            <td>
+                <ol>
+                    1.czerwony<br>
+                    2.niebieski<br>
+                    3.żółty<br>
+                    4.inny<br>
+                </ol>
+            </td>
+        </tr>
+    </table>
+</div>
+
+
+<div class="prawy">
+ Podaj numer kształtu:<br>
+ <input type="number"><br>
+ Skomponuj swój kolor, podaj RGB:<br>
+ R:<input type="number">G:<input type="number">B:<input type="number"> <br>
+ <button type="submit">Zamów</button>  
+ <br>
+ <br>
+ Wybrany kształt
+ <br>
+ <button type="button">Wybrany kolor</button>
+</div>
+
+<div class="stopka">
+    <i>Autor strony:Bartłomiej Puk 3B</i>
+</div>
 </body>
+
 </html>
