--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
     </main>
     <footer>
-        <p>Autor strony:<i> Jakub Kwolek</i></p>
+        <p>Autor strony:<i> Jakub Kwolek 3B</i></p>
     </footer>
 </body>
 </html>
