--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
     
     <footer>
-        <p>Autor strony: PESEL</p>
+        <p>Autor strony: Daniel Jagusz 3B</p>
     </footer>
 </body>
 </html>
