--- a/zamowienie.html
+++ b/zamowienie.html
@@ -51,7 +51,7 @@
     <section class="MP">
         <form>
             <label>Podaj numer kształtu</label><br>
-            <input type="num">
+            <input type="num"><br>
             <label>Skomponuj swój kolor, podaj RGB</label><br>
             <label>R</label><input type="num">
             <label>G</label><input type="num">
