--- a/zamowienie.html
+++ b/zamowienie.html
@@ -42,19 +42,23 @@
     </div>
     <div class="mein">
         <p>Podaj numer kształtu: </p>
-        <input type="number">
+        <input type="number" class="ksztalt">
         <p>skomponuj swój kolor, podaj RGB: </p>
         <p>R</p>
-        <input type="number">
+        <input type="number" class="R">
         <p>G</p>
-        <input type="number">
+        <input type="number" class="G">
         <p>B</p>
-        <input type="number">
-        <input type="submit">
+        <input type="number" class="B">
+        <input type="submit" class="btn">
         <p>Wybrany kształt</p>
-        <button>Wybrany kolor</button>
+        <button class="rg">Wybrany kolor</button>
+        <p class="ksztaltW"></p>
     </div>
 
     <footer class="banStop"><p>Autor strony: <q> PESEL(Kamil Świątek 3B)</q></p></footer>
+
+    <script src="index.js"></script>
+
 </body>
 </html>
